<resources>
    <string name="app_name">Kabboot</string>
    <string name="invalid_email">Email must be like this \"example@example.example\"</string>
    <string name="invalid_phone1">Phone number must be equal 11 numbers</string>
    <string name="invalid_confirm_password">Confirm password not match</string>
    <string name="invalid_phone2"> number</string>
    <string name="All_your_car_needs">ALL YOUR CAR NEEDS IN ONE PLACE</string>
    <string name="load">Loading..</string>
    <string name="services">Services</string>
    <string name="online_store">Online Store</string>
    <string name="Notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="phone">Phone Number</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="forgetpass">Forget Password</string>
    <string name="fragment_set_new_password_btn_reset_pass">Reset Password</string>
    <string name="continu">Continue</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="city">City</string>
    <string name="hot_deals">Hot Deals</string>
    <string name="promo_codes">Promo Codes</string>
    <string name="how_can_help">How can we help?</string>
    <string name="date">Select Date</string>
    <string name="time">Select Time</string>
    <string name="submit">Submit</string>
    <string name="address">Address</string>
    <string name="vendor">Vendor</string>
    <string name="load_more">Load More</string>
    <string name="vendor_details">Vendor Details</string>
    <string name="vendor_info">Vendor Info</string>
    <string name="working_days">Working Days</string>
    <string name="next">Next</string>
    <string name="in_stock">On Stock</string>
    <string name="services_booked">Book a Service</string>
    <string name="time_and_date_of_visit">Time and date of visit</string>
    <string name="complete_order_book">Complete Order Booking</string>
    <string name="view_cart">View Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="Items">Items</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="complete_payment">Complete Payment</string>
    <string name="Recipt">Recipt</string>
    <string name="Apply">Apply</string>
    <string name="Enter_your_promocode">promocode ( Optional )</string>
    <string name="Enter_your_promocode2">Enter your promocode ( Optional )</string>
    <string name="Filters">City Filter</string>
    <string name="user_name">User Name</string>
    <string name="select_date">select date please</string>
    <string name="email">Email</string>
    <string name="wait">Please wait....</string>
    <string name="error">Something went wrong try agian</string>
    <string name="error_inter_net">No internet connection Please check your internet and try again later</string>
    <string name="empty">Please Enter and Complete your Data First</string>
    <string name="invalid_password">Password Must be more than 3 of Chars and Numbers</string>
    <string name="invalid_user_name">Username Must be more than 2 Chars</string>
    <string name="invalid_user_prom">Promo Code Required</string>
    <string name="invalid_email_required_field">Email Field Required</string>
    <string name="invalid_date_required_field">Date Field Required</string>
    <string name="invalid_time_required_field">Time Field Required</string>
    <string name="invalid_address_required_field">Address Field Required</string>
    <string name="invalid_vendor_required_field">Please Must Choose one Vendor From List</string>
    <string name="invalid_vendor_no_services">No Services Available Now Please Choose other Vendor From List</string>
    <string name="invalid_vendor_no_days">This Vendor Not Available Now Please Choose other From List</string>
    <string name="invalid_city_required_field">City Field Required</string>
    <string name="invalid_services_required_field">Please Select At least One Service First</string>
    <string name="account">My Account</string>
    <string name="logout">Log Out</string>
    <string name="about_kabbot_uSA">About Kabboot</string>
    <string name="ADDRESS_CONTACT_INFO">ADDRESS CONTACT INFO</string>
    <string name="location">Location</string>
    <string name="hi_about_us">Hi! Welcome to Kabboot App</string>
    <string name="all_products">All  Products</string>
    <string name="Specifications">Specifications</string>
    <string name="select_vendor">Select Vendor</string>
    <string name="info">Info</string>
    <string name="edit_your_Info">Edit Your Info</string>
    <string name="save_changes">Save Changes</string>
    <string name="title_activity_maps">Select Map Location</string>
    <string name="GPSAlertDialogTitle">GPSAlertDialogTitle</string>
    <string name="action_settings">action_settings</string>
    <string name="GPSAlertDialogMessage">GPSAlertDialogMessage</string>
    <string name="cancel">Cancel</string>
    <string name="save_location">Submit your Selected Location</string>
    <string name="no_data_in_your_cart">No Products In your Cart now Please Add Product first</string>
    <string name="no_data">No Data Found</string>
    <string name="manage_bookings">Manage My Orders</string>
    <string name="My_service_Bookings">My services booking</string>
    <string name="My_Products_Bookings">My product orders</string>
    <string name="check_your_internet_and_try">Check your Internet Connection and try agian</string>
    <string name="services_booked2">My Services Order</string>
    <string name="Items2">My Items Order</string>
    <string name="my_care">My Car</string>
    <string name="save">Save</string>
    <string name="make">Make</string>
    <string name="year">Year</string>
    <string name="model">Model</string>
    <string name="liters">Liters</string>
    <string name="filter">Filter</string>
    <string name="store_filters">Store Filters</string>
    <string name="price_range">Price Range</string>
    <string name="price_range_to">Price Range To</string>
    <string name="Condition">Condition</string>
    <string name="kabboot_offers">Kabboot Offers</string>
    <string name="sub_cat">Select Sub Category</string>
    <string name="enterCode">Verification Code</string>
    <string name="ok">Ok</string>
    <string name="location_required">Select Your Location on Map First</string>
    <string name="product_name">Product Name</string>
    <string name="product_category_name">Product Category Name</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="city_filter">City Filter</string>
</resources>