<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_35sdp"
        >
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/_13sdp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fragment_change_details_my_profile_photo_circularImageView"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:src="@drawable/placeperson"
                android:elevation="@dimen/_3sdp"
                />
            <ImageButton
                android:id="@+id/fragment_change_details_my_profile_photo_btn"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:src="@drawable/ic_camera_alt_black_24dp"
                android:layout_gravity="right|bottom"
                android:elevation="@dimen/_3sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/blue_black_shape_trangle"
                />
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_your_Info"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/gray2"
            />
         <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_change_details_my_profile_til_user_name"
            style="@style/text_input_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:errorTextAppearance="@style/error_appearance"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_change_details_my_profile_user_name"
            style="@style/EditTextLogin"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="@dimen/_10sdp"
            android:layout_height="@dimen/_56sdp"
            android:hint="@string/user_name"
            android:ems="10"
            android:inputType="textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_change_details_my_profile_til_phone"
        style="@style/text_input_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/error_appearance"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_change_details_my_profile_phone_etxt"
            style="@style/EditTextLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56sdp"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/phone"
            android:ems="10"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_change_details_my_profile_til_email"
            style="@style/text_input_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/error_appearance"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_change_details_my_profile_email_etxt"
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_56sdp"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/email"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_11sdp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_change_details_my_profile_til_city"
                style="@style/text_input_login"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_height="@dimen/_56sdp"
                app:errorTextAppearance="@style/error_appearance"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_location_city_24"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/city"

                    android:inputType="textAutoComplete" />
<!--                android:focusable="true"-->
<!--                android:editable="false"-->
<!--                android:inputType="none"-->
            </com.google.android.material.textfield.TextInputLayout>
            <Spinner
                android:id="@+id/fragment_change_details_my_profile_sp_city"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_46sdp"
                android:elevation="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_19sdp"
                android:layout_marginEnd="@dimen/_19sdp"
                android:visibility="gone"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:textAlignment="center"
                />
        </FrameLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_change_details_my_profile_til_password"
            style="@style/text_input_login"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/error_appearance"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_change_details_my_profile_password_etxt"
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_56sdp"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_baseline_https_24"
                android:drawablePadding="@dimen/_10sdp"
                android:ems="10"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_change_details_my_profile_til_confirm_password"
            style="@style/text_input_login"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/error_appearance"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_change_details_my_profile_confirm_password_etxt"
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:drawableStart="@drawable/ic_baseline_https_24"
                android:drawablePadding="@dimen/_10sdp"
                android:layout_height="@dimen/_56sdp"
                android:hint="@string/confirm_password"
                android:ems="10"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>



        <LinearLayout
        android:id="@+id/fragment_change_details_my_profile_save_changes_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/button_style"
            android:layout_marginTop="@dimen/_60sdp"
        android:background="@drawable/gradient_btn_blue_black_shape"
        >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/save_changes"
             style="@style/button_text_style"
             />
<!--        <ImageView-->
<!--            android:layout_width="@dimen/_15sdp"-->
<!--            android:layout_height="@dimen/_15sdp"-->
<!--            android:src="@drawable/ic_baseline_navigate_next_24"-->
<!--            android:layout_marginStart="@dimen/_20sdp"-->
<!--            android:background="@drawable/continue_white_shape"-->
<!--            />-->
    </LinearLayout>
<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:elevation="@dimen/_1sdp"-->
<!--            android:scaleType="centerCrop"-->
<!--            android:layout_marginEnd="-100dp"-->
<!--            android:layout_marginStart="-35dp"-->
<!--            android:layout_marginTop="-30dp"-->
<!--            android:src="@drawable/login_img"-->
<!--            />-->
    </LinearLayout>
</ScrollView>