<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_110sdp"
            android:layout_gravity="center"
            android:elevation="@dimen/_1sdp"
            android:padding="@dimen/_5sdp"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:src="@drawable/kabbot_logo"
            android:background="@drawable/gradient_btn_blue_black_shape"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/fragment_login_change_to_register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/gray2"
                android:textSize="@dimen/_18ssp"
                android:gravity="top"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:textColor="@color/blue_black"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_3ssp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/blue_black"
                    />
            </LinearLayout>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_login_til_phone"
            style="@style/text_input_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:errorTextAppearance="@style/error_appearance"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_login_phone_etxt"
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_56sdp"
                android:hint="@string/phone"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:drawablePadding="@dimen/_10sdp"
                android:ems="10"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_login_til_password"
            style="@style/text_input_login"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/orange"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/error_appearance"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_login_password_etxt"
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_56sdp"
                android:drawableStart="@drawable/ic_baseline_https_24"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/password"
                android:ems="10"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/fragment_login_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/button_style"
            android:layout_marginTop="@dimen/_75sdp"
            android:background="@drawable/gradient_btn_blue_black_shape"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                style="@style/button_text_style"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/fragment_login_forget_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_35sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/forgetpass"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            />
        <!--        <ImageView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:elevation="@dimen/_1sdp"-->
        <!--            android:scaleType="fitXY"-->
        <!--            android:src="@drawable/login_img"-->
        <!--            />-->

    </LinearLayout>
</ScrollView>