<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/white"
 >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_35sdp"
        >
    <ImageView
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_gravity="center"
        android:elevation="@dimen/_1sdp"
        android:scaleType="centerCrop"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:src="@drawable/kabbot_logo"
      />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-10dp"
            android:gravity="center_horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:orientation="vertical"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/blue_black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/blue_black"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/fragment_register_change_to_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/gray2"
                android:textSize="@dimen/_14sdp"
                android:gravity="top"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                />
        </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_register_til_phone"
        style="@style/text_input_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:errorTextAppearance="@style/error_appearance"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_register_phone_etxt"
            style="@style/EditTextLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:hint="@string/phone"
            android:ems="10"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_11sdp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_register_til_gender"
                style="@style/text_input_login"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_height="@dimen/_50sdp"
                app:errorTextAppearance="@style/error_appearance"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/city"
                    android:focusable="true"
                    android:editable="false"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>
            <Spinner
                android:id="@+id/fragment_register_sp_gender"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:elevation="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_19sdp"
                android:layout_marginEnd="@dimen/_19sdp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:textAlignment="center"
                />
        </FrameLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_register_til_password"
            style="@style/text_input_login"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/error_appearance"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_register_password_etxt"
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                android:hint="@string/password"
                android:ems="10"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_register_til_confirm_password"
            style="@style/text_input_login"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/error_appearance"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_register_confirm_password_etxt"
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                android:hint="@string/confirm_password"
                android:ems="10"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>



        <LinearLayout
        android:id="@+id/fragment_register_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/button_style"
            android:layout_marginTop="@dimen/_60sdp"
        android:background="@drawable/gradient_btn_blue_black_shape"
        >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/register"
             style="@style/button_text_style"
             />
<!--        <ImageView-->
<!--            android:layout_width="@dimen/_15sdp"-->
<!--            android:layout_height="@dimen/_15sdp"-->
<!--            android:src="@drawable/ic_baseline_navigate_next_24"-->
<!--            android:layout_marginStart="@dimen/_20sdp"-->
<!--            android:background="@drawable/continue_white_shape"-->
<!--            />-->
    </LinearLayout>
<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:elevation="@dimen/_1sdp"-->
<!--            android:scaleType="centerCrop"-->
<!--            android:layout_marginEnd="-100dp"-->
<!--            android:layout_marginStart="-35dp"-->
<!--            android:layout_marginTop="-30dp"-->
<!--            android:src="@drawable/login_img"-->
<!--            />-->
    </LinearLayout>
</ScrollView>